+ Region Class + 2 dictionaries for region's name generation (in resources) + Randomized generation of regions (name, coordinates, tech level, etc.) + Info panel for selected region + Distance calculations + Fuel cost calculation with Pilot skill discount + Map scene with proportional layout + Specific icons for: current, visited and unknown regions + Stats bar at the bottom of the map with skills and credits + Ability to travel + Travel prevention when credits are too low + Basic region scene (with only "back" button and description of the region)

--- a/src/css/Styles.css
+++ b/src/css/Styles.css
@@ -45,9 +45,47 @@
     -fx-text-fill: YELLOW;
 }
 
-#regionName{
+#regionName {
     -fx-font: 15px "Comic Sans Ms";
     -fx-background-color: transparent;
     -fx-text-fill: YELLOW;
 }
 
+#planetText {
+    -fx-font: 35px "Comic Sans Ms";
+    -fx-background-color: transparent;
+}
+
+#locationButt{
+    -fx-font: 40px "Comic Sans Ms";
+    -fx-background-color: transparent;
+}
+
+#locationInfo{
+    -fx-font: 15px "Comic Sans Ms";
+    -fx-background-color: transparent;
+    -fx-text-fill: YELLOW;
+}
+
+#infoPane{
+    -fx-background-color: GREY;
+    -fx-border-color: YELLOW;
+}
+
+#travelToLocation{
+    -fx-font: 15px "Comic Sans Ms";
+    -fx-background-color: rgba(0, 156, 0, 0.7);
+    -fx-text-fill: BLACK;
+}
+
+#closeInfoPanel{
+    -fx-font: 15px "Comic Sans Ms";
+    -fx-background-color: rgba(255, 0, 0, 0.48);
+    -fx-text-fill: BLACK;
+}
+
+#statsBar {
+    -fx-font: 18px "Comic Sans Ms";
+    -fx-background-color: transparent;
+    -fx-text-fill: YELLOW;
+}
